fixed word wrap issue on vote page

--- a/impromptu-client/src/index.css
+++ b/impromptu-client/src/index.css
@@ -40,3 +40,6 @@ body {
   background: rgb(var(--background-rgb));
 }
 
+div {
+  overflow-wrap: break-word
+}
